package usw.pop;

/**
 *
 */
public interface Aircraft {
}
