package usw.pop;

public class CabinCrew extends Employee {
}
