package usw.pop;

public class Cruise {
}
