package usw.pop;

public class Helicopter implements Aircraft {
}
