package usw.pop;

public class Hotel {
}
