package usw.pop;

public class PackageRep extends Employee {
}
