package usw.pop;

public class Pilot extends Employee {
}
