package usw.pop;

public class Plane implements Aircraft {
}
