package usw.pop;

public class ShipCaptain extends Employee {
}
