package usw.pop;

public class ShipEmployee extends Employee {
}
